# tiktok-api

./: .gitignore  DEPLOYMENT.md  Dockerfile  README.md  docker-compose.prod.yml  docker-compose.yml  env.deployment.example  env.example  nginx.conf  pyproject.toml
.github/workflows/: deploy-cicd.yml
app/: config.py  dependencies.py  main.py
app/api/v1/: router.py
app/api/v1/endpoints/: hashtag.py  proxy.py  search.py  sound.py  trending.py  user.py  video.py
app/middleware/: rate_limit.py
app/models/: schemas.py
app/services/: tiktok_service.py  token_manager.py
app/services/proxy/: __init__.py  algorithms.py  base_provider.py  models.py  webshare_provider.py
app/utils/: url_parser.py
docs/: URL_PARSING.md
scripts/: deploy.sh  quick-deploy.sh  server-setup.sh
tests/: test_api.py
