[tool.poetry]
name = "tik-tok-api"
version = "0.1.0"
description = "FastAPI backend for TikTok API wrapper"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.119.0"
uvicorn = { extras = ["standard"], version = "^0.37.0" }
tiktokapi = "^7.2.1"
playwright = "^1.55.0"
pydantic-settings = "^2.11.0"
slowapi = "^0.1.9"
redis = "^6.4.0"
python-dotenv = "^1.1.1"
proxyproviders = "^0.2.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.2"
pytest-asyncio = "^1.2.0"
httpx = "^0.28.1"
black = "^25.9.0"
ruff = "^0.14.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.ruff]
target-version = "py39"
line-length = 88
select = [
  "E", # pycodestyle errors
  "W", # pycodestyle warnings
  "F", # pyflakes
  "I", # isort
  "B", # flake8-bugbear
  "C4", # flake8-comprehensions
  "UP", # pyupgrade

]
ignore = [
  "E501", # line too long, handled by black
  "B008", # do not perform function calls in argument defaults
  "C901", # too complex

]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]
